--- a/src/app/lista/lista.component.html
+++ b/src/app/lista/lista.component.html
@@ -1,6 +1,11 @@
 <form>
-  <input type="text" class="form-control" name="fraza" placeholder="Szukaj..." [(ngModel)]="fraza">
-  <select class="form-control" name="woj" [(ngModel)]="woj">
+  <div class="form-group">
+    <label for="fraza">Szukaj:</label>
+    <input type="text" class="form-control" id="fraza" name="fraza" placeholder="Szukaj..." [(ngModel)]="fraza">
+  </div>
+  <div class="form-group">
+    <label for="woj">Województwo:</label>
+      <select class="form-control" name="woj" id="woj" [(ngModel)]="woj">
         <option value="">Wszystkie</option>
         <option value="D">Dolnośląskie</option>
         <option value="C">Kujawsko-Pomorskie</option>
@@ -20,13 +25,18 @@
         <option value="Z">Zachodnio-pomorskie</option>
         <option value="HP">Policja</option>
   </select>
-</form>
-<div class="col-sm-12">
-  <table class="table table-striped">
-    <tr><th>Skrót</th><th>Nazwa</th></tr>
-    <tr *ngFor="let tab of tabs | filter: fraza | wojewodztwo: woj">
-      <td>{{tab.skrot}}</td>
-      <td>{{tab.nazwa}}</td>
-    </tr>
-  </table>
 </div>
+</form>
+<div class="col-xs-3" *ngFor="let tab of tabs | filter: fraza | wojewodztwo: woj">
+  <div class="info" [ngClass]="tab.skrot.substring(0,1)">
+    <h3 [ngClass]="tab.skrot.substring(0,1)">{{tab.skrot}}</h3>
+    <p>{{tab.nazwa}}</p>
+  </div>
+</div>
+<!-- <table class="table table-striped">
+  <tr><th>Skrót</th><th>Nazwa</th></tr>
+  <tr *ngFor="let tab of tabs | filter: fraza | wojewodztwo: woj">
+    <td>{{tab.skrot}}</td>
+    <td>{{tab.nazwa}}</td>
+  </tr>
+</table> -->
